--- a/languages/sprout-invoices-pt_BR.po
+++ b/languages/sprout-invoices-pt_BR.po
@@ -2,16 +2,16 @@
 # This file is distributed under the same license as the Plugins - Sprout Invoices - Client Invoicing &#38; Estimates / Quotes - Stable (latest release) package.
 msgid ""
 msgstr ""
-"PO-Revision-Date: 2017-01-24 11:46-0200\n"
+"PO-Revision-Date: 2019-07-26 10:05-0700\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
-"X-Generator: Poedit 1.8.11\n"
+"X-Generator: Poedit 2.2.3\n"
 "Language: pt_BR\n"
 "Project-Id-Version: Plugins - Sprout Invoices - Client Invoicing &#38; Estimates / Quotes - Stable (latest release)\n"
 "POT-Creation-Date: \n"
-"Last-Translator: \n"
+"Last-Translator: Dan Cameron <l10n@sproutapps.co>\n"
 "Language-Team: \n"
 
 #: views/admin/options/test-send-selection.php:80
