--- a/languages/sprout-invoices-uk.po
+++ b/languages/sprout-invoices-uk.po
@@ -6,8 +6,8 @@ msgstr ""
 "Project-Id-Version: Sprout Invoices\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-08-28 14:36-0800\n"
-"PO-Revision-Date: 2016-03-02 08:58-0800\n"
-"Last-Translator: Dan Cameron <l10n@sproutinvoices.com>\n"
+"PO-Revision-Date: 2019-07-26 10:05-0700\n"
+"Last-Translator: Dan Cameron <l10n@sproutapps.co>\n"
 "Language-Team: Ukrainian (http://www.transifex.com/sprout-apps/sprout-"
 "invoices/language/uk/)\n"
 "MIME-Version: 1.0\n"
@@ -16,9 +16,9 @@ msgstr ""
 "Language: uk\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
 "%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
-"X-Generator: Poedit 1.5.7\n"
+"X-Generator: Poedit 2.2.3\n"
 "X-Poedit-Basepath: /Users/dancameron/Projects/Sprout_Apps/development/wp-"
-"content/\n"
+"content\n"
 "X-Poedit-KeywordsList: __;_e;self::__;self::_e;si__;si_e;si_esc_e;si_esc__\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 "X-Poedit-SearchPath-0: plugins/sprout-invoices-pro\n"
